[gd_scene load_steps=8 format=3 uid="uid://bxmou7bi26i34"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="FontFile" path="res://TitleFont.tres" id="2"]
[ext_resource type="Theme" path="res://MenuTheme.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://cy0opphghfcf5" path="res://ButtonSprites/MenuButton.png" id="3_vybpf"]
[ext_resource type="Texture2D" uid="uid://bmue3i2nsi1c0" path="res://ButtonSprites/MenuButtonPressed.png" id="4_jpix0"]
[ext_resource type="Script" path="res://Output.gd" id="6_sy3gq"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.168627, 0.160784, 0.152941, 0.843137)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="BarsA" type="Node2D" parent="."]

[node name="BarsB" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1280.0
offset_top = 17.0
offset_right = 1320.0
offset_bottom = 57.0
theme = ExtResource("3")

[node name="Menu" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 23.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 42.0

[node name="BG" type="Panel" parent="Control/Menu" groups=["Menu"]]
layout_mode = 0
offset_left = 32.0
offset_top = 3.0
offset_right = 585.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer2" type="MarginContainer" parent="Control/Menu"]
layout_mode = 0
offset_left = 25.0
offset_right = 521.0
offset_bottom = 430.0
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 43

[node name="VSeparator" type="VSeparator" parent="Control/Menu/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 91

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Menu/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MenuItems" type="HBoxContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer" groups=["Menu"]]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="Title" type="Label" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 36
text = "Menu"

[node name="GridContainer" type="GridContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
columns = 2

[node name="StackSize" type="Label" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Stack size  "

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="StackSizeInput" type="LineEdit" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "3"

[node name="Generate" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="HSeparator6" type="HSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="OptionButton" type="OptionButton" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
item_count = 12
selected = 0
popup/item_0/text = "Whiteout"
popup/item_0/id = 0
popup/item_1/text = "Rainbow"
popup/item_1/id = 1
popup/item_2/text = "Bubblegum"
popup/item_2/id = 2
popup/item_3/text = "Summer"
popup/item_3/id = 3
popup/item_4/text = "Ocean"
popup/item_4/id = 4
popup/item_5/text = "Forest"
popup/item_5/id = 5
popup/item_6/text = "Chocolate"
popup/item_6/id = 6
popup/item_7/text = "Strawberries n' Cream"
popup/item_7/id = 7
popup/item_8/text = "Lavender"
popup/item_8/id = 8
popup/item_9/text = "Midnight"
popup/item_9/id = 9
popup/item_10/text = "Typewriter"
popup/item_10/id = 10
popup/item_11/text = "Patchwork"
popup/item_11/id = 11

[node name="HSeparator4" type="HSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2

[node name="Compute" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Compute"

[node name="PlayPause" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play/Pause"

[node name="Reverse" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Reverse"

[node name="StepBackward" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " < "

[node name="StepForward" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " > "

[node name="Speed" type="OptionButton" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "x1"
popup/item_0/id = 1
popup/item_1/text = "x2"
popup/item_1/id = 2
popup/item_2/text = "x5"
popup/item_2/id = 3
popup/item_3/text = "x25"
popup/item_3/id = 3
popup/item_4/text = "x100"
popup/item_4/id = 4
popup/item_5/text = "x500"
popup/item_5/id = 5
popup/item_6/text = "x1000"
popup/item_6/id = 6

[node name="HSeparator2" type="HSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HSeparator5" type="HBoxContainer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Reset" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HSeparator5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Reset"

[node name="VSeparator" type="VSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HSeparator5"]
layout_mode = 2
theme_override_constants/separation = 172

[node name="Quit" type="Button" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HSeparator5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Quit"

[node name="Output" type="Label" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
script = ExtResource("6_sy3gq")

[node name="DisplayTimer" type="Timer" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/Output"]
wait_time = 5.0

[node name="HSeparator3" type="HSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="QueueTitle" type="Label" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2
text = "Command queue"

[node name="Queue" type="Label" parent="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Control/Menu/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 39

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu"]
layout_mode = 2
offset_left = 472.0
offset_top = 43.0
offset_right = 552.0
offset_bottom = 136.0

[node name="MenuButton" type="TextureButton" parent="Control/Menu/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_vybpf")
texture_pressed = ExtResource("4_jpix0")

[node name="HSeparator" type="HSeparator" parent="Control/Menu/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/GridContainer/HBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="item_selected" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/Compute" to="." method="_on_Compute_pressed"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="toggled" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/Reverse" to="." method="_on_reverse_toggled"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/StepBackward" to="." method="_on_step_backward_pressed"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/StepForward" to="." method="_on_step_forward_pressed"]
[connection signal="item_selected" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HBoxContainer/Speed" to="." method="_on_speed_item_selected"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HSeparator5/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/HSeparator5/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/Output/DisplayTimer" to="Control/Menu/HBoxContainer2/HBoxContainer/MenuItems/VBoxContainer/Output" method="_on_display_timer_timeout"]
[connection signal="toggled" from="Control/Menu/VBoxContainer/MenuButton" to="." method="_on_menu_button_toggled"]
